Refactor: Update JsonHttpClient to enable case-insensitive property binding and improve BrowserLifecycleExtension for better thread handling; add new PlaceOrder and ViewOrder tests for enhanced order validation